Static analysis results 2. Docstrings and atomization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
         "pickledb",
         "tiobe",
         "totalkeys"
+    ],
+    "python.analysis.extraPaths": [
+        "./tools"
     ]
 }
