--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,11 @@
     ],
     "python.analysis.extraPaths": [
         "./tools"
-    ]
+    ],
+    "docwriter.style": "Auto-detect",
+    "python.testing.pytestArgs": [
+        "."
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
